--- a/src/index.css
+++ b/src/index.css
@@ -7,3 +7,23 @@ body {
 img {
   max-width: 100%;
 }
+
+.dog-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  
+  
+}
+
+.dog-container h1 { 
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+.dog-container button {
+  margin-top: 20px;
+  padding: 5px;
+  background-color: white;
+}
